<resources>
    <string name="app_name">CouponsApp</string>
    <string name="api_maps_key">AIzaSyDfzM6e_uHjNlq-_6rk6nM-PEYWHOnLE20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="btn_nuevo_crud">Agregar</string>
    <string name="btnBuscar">Buscar</string>
    <string-array name="crud_array">
        <item>Editar</item>
        <item>Eliminar</item>
    </string-array>
    <string-array name="restaurante_array">
        <item>Editar</item>
        <item>Ubicar</item>
        <!--        <item>Eliminar</item>-->
    </string-array>
    <string name="dialog_crear">Nuevo</string>
    <string name="guardar_usuario_configuracion">Guardar</string>
    <string name="guardado">Guardado!</string>
    <string name="dialog_editar">Editar</string>
    <string name="eliminado">Eliminado!</string>
    <string name="no_eliminado">No se puede eliminar</string>
    <string name="text_bienvenida">Bienvenid@</string>
    <string name="text_informacion">Aplicación para la generación de cupones para restaurantes, validos con un tiempo limitado definido, canjeados por medio de  codigos QR</string>

    <string name="title_username">Username</string>
    <string name="title_rol">Rol</string>
    <string name="title_email">Email</string>
    <string name="title_contrasena">Contraseña</string>
    <string name="cambiar_contrasena_confirmacion_1">Confirmar contraseña</string>
    <string name="cambiar_contrasena_confirmacion_2">Confirmar Contraseña</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="title_datos_personales">Datos Personales</string>
    <string name="title_perfil_de_usuario_nombre">Nombre</string>
    <string name="title_perfil_de_usuario_apellidos">Apellidos</string>
    <string name="contrasena_no_coincide">Contraseñas no coinciden</string>
    <string name="invalido_username">Datos no validos</string>
    <string name="title_pefil_de_usuario">Perfil de Usuario</string>
    <string name="title_telefono">Telefono</string>

    <string name="lbl_datos_restaurante">Datos del Restaurante</string>
    <string name="lbl_registrar_negocio">Registrar Restaurante</string>
    <string name="btn_buscar_negocio">Buscar</string>
    <string name="hint_nombre_negocio">Nombre</string>
    <string name="hint_dirección_negocio">Dirección</string>
    <string name="hint_latitud">Latitud</string>
    <string name="hint_longitud">Longitud</string>
    <string name="hint_id_map">ID Google Maps</string>
    <string name="hint_telefono_negocio">Telefono</string>
    <string name="guardar">Guardar</string>
</resources>