<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="510dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                android:text="@string/title_pefil_de_usuario" />
<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginBottom="30dp"-->
<!--                android:background="@android:color/darker_gray"/>-->
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/foto_perfil"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/purple_500"
                    android:src="@drawable/ic_baseline_person_24"/>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/tomar_foto_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_camera_alt_24"/>
                    <ImageButton
                        android:id="@+id/upload_foto_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/ic_baseline_file_upload_24"/>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_username" />
            <EditText
                android:id="@+id/perfil_de_usuario_username"
                android:enabled="false"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_rol" />
            <Spinner
                android:id="@+id/perfil_spinner_rol"
                android:visibility="gone"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email" />
            <EditText
                android:id="@+id/perfil_de_usuario_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contrasena" />
            <EditText
                android:id="@+id/perfil_de_usuario_contrasena"
                android:enabled="false"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_contrasena"/>
            <EditText
                android:id="@+id/perfil_de_usuario_contrasena2"
                android:visibility="gone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cambiar_contrasena_confirmacion_2"/>

            <Button
                android:id="@+id/button_cambiar_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_contrasena"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_datos_personales" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_perfil_de_usuario_nombre" />
            <EditText
                android:id="@+id/perfil_de_usuario_nombre"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_perfil_de_usuario_apellidos" />
            <EditText
                android:id="@+id/perfil_de_usuario_apellidos"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_telefono" />
            <EditText
                android:id="@+id/perfil_de_usuario_telefono"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_guardar_usuario_configuracion"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/guardar_usuario_configuracion"/>
    </LinearLayout>
</LinearLayout>